# physimos

./: .gdbinit  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Camera.hpp  Input.hpp  Makefile  README.md  Simulation.hpp  TODO.md  Types.hpp  WorldObject.hpp  glthrowsim  gptTriangles.cpp  main  main.cpp  main_temp.cpp  model.hpp  shader.fs  shader.hpp  shader.vs  tee  triangle.pso  ui.vs  vShader.vs  vertex.hpp
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Input.cpp  Input.hpp  InputState.hpp  Math.cpp  Math.hpp  Model.cpp  Model.hpp  PSO_util.hpp  PScene.hh  RigidBody.cpp  RigidBody.hpp  Scene.hh  SimWorldContainer.cpp  SimWorldContainer.hpp  Simulation.cpp  Simulation.hpp  Simulator.cpp  Simulator.hpp  Timing.cpp  Timing.hpp  Types.hpp  VectorMath.cpp  VectorMath.hpp  Windowing.cpp  Windowing.hpp  WorldObject.cpp  WorldObject.hpp  WorldRenderer.cpp  WorldRenderer.hpp  WorldScene.cpp  WorldScene.hpp  WorldSimulator.cc  WorldSimulator.hh  bmp_loader.cpp  bmp_loader.hpp  conductor.cc  conductor.hh  (+39 more)
src/conductor/: CMakeLists.txt  conductor2D.cc  conductor2D.hh  conductor2D_grabstate.hh
src/draw/: CMakeLists.txt  draw.cc  draw.hh  draw_shader.cc  draw_shader.hh
src/draw/shaders/: draw_vert.glsl
src/file_format/: CMakeLists.txt  obj_loader.cpp  resources.hh
src/file_format/bmp/: CMakeLists.txt  bmp.hh  bmp_header.cc  bmp_header.hh
src/image/: CMakeLists.txt  bitmap.cc  bitmap.hh  bmp.cc  bmp.hh
src/io/: CMakeLists.txt  bmp_loader.cpp  obj_loader.hpp  pretty_str.cc  pretty_str.hh
src/io/bmp/: bmp.cc  (+3 more)
src/lib/: CMakeLists.txt  alloc.cc  alloc.hh  arr.hh  defs.hh  dir.hh  err.cc  err.hh  file.cc  file.hh  fs.cc  fs.hh  hash.hh  lib.hh  list.hh  log.cc  log.hh  main_file.cc  main_lib.cc  main_str.cc  minmax.hh  opt.hh  pair.hh  phile.hh  print.cc  print.hh  process.cc  process.hh  res.hh  result.cc  result.hh  str.cc  str.hh  str_std.hh  str_util.hh  string.cc  string.hh  time.hh  toml.cc  toml.hh
src/loaders/: CMakeLists.txt  bmp_loader.hpp  png_loader.cpp
src/logger/: CMakeLists.txt  logger.cc  logger.hh  logger.md
src/math/: CMakeLists.txt  Math.cc  aabb.hh  box2D.cc  box2D.hh  const.hh  core.hh  graph2D.hh  math.cc  math.hh  number.hh  orient.hh  polynomial.hh  quarternion.hh  rtcd.hh  shape.cc  shape.hh  sphere.hh  spherical.hh  transform.cc  transform.hh  vec.hh  vec3.cc  vec3.hh  vecmat.cc  vecmat.hh
src/model/: CMakeLists.txt  camera.cc  camera.hh  main_editor.cc  model.cc  model.hh  model_editor.cc  model_editor.hh  obj.cc  obj.hh  obj_types.hh  renderer_axes.cc  renderer_axes.hh  renderer_model.cc  renderer_model.hh  scene.cc  scene.hh
src/models/: firstSimTriangle.pso  triangle.pso
src/objects/: CMakeLists.txt  Model.cpp  Model.hpp  loaded_resources.cc  loaded_resources.hh  object_types.hh
src/opengl/: CMakeLists.txt  color.hh  error.cc  error.hh  main_opengl.cc  opengl.cc  opengl.hh  program.cc  program.hh  renderer2D.cc  renderer2D.hh  rendererUI.cc  rendererUI.hh  renderer_axes.cc  renderer_axes.hh  renderer_model.cc  renderer_model.hh  renderer_model_color.cc  renderer_model_color.hh  renderer_model_texture.cc  renderer_model_texture.hh  renderer_quad_2d.cc  renderer_quad_2d.hh  renderer_vector.cc  renderer_vector.hh  shader.cc  shader.hh  texture.cc  texture.hh  texture_fb.cc  texture_fb.hh  texture_fbms.cc  texture_fbms.hh  texture_framebuffer_multi.cc  texture_framebuffer_multi.hh  texture_unit.cc  texture_unit.hh
src/phont/: CMakeLists.txt  README.md  auxwin.cc  auxwin.hh  main.cc  main_phont.cc  phont.cc  phont.hh
src/physics/: CMakeLists.txt  main_physics.cc
src/rend/: CMakeLists.txt  bitmap.hh  main_rend.cc  rend.cc  rend.hh  rend_manager.cc  rend_manager.hh  shader.cpp  texture_unit.hh  wo_renderer.hpp
src/render/: CMakeLists.txt  bitmap.cc  main_render.cc  render_types.hh  shader.cpp  shader.hpp  wo_renderer.cpp
src/res/: CMakeLists.txt  bmp_loader.cpp  obj_loader.cpp  obj_loader.hpp  pso_loader.cc  pso_loader.hh  resources.cc  resources.hh  texture_gen.cc  texture_gen.hh
src/scene/: CMakeLists.txt  Camera.cpp  Camera.hpp  WorldObject.cpp  WorldObject.hpp  WorldSimulator.cc  WorldSimulator.hh  bc.cc  bc.hh  camera.cc  camera.hh  camera2D.cc  camera2D.hh  camera_2d.cc  camera_2d.hh  forest_planet.hh  isector.hh  jmesh.hh  lamp.hh  manager.cc  manager.hh  manager_3D.cc  manager_3D.hh  manager_object.cc  manager_object.hh  manager_physics.cc  manager_physics.hh  manager_property.cc  manager_property.hh  manager_quad.cc  manager_quad.hh  mesh.cc  mesh.hh  mesh_line.cc  mesh_line.hh  mesh_sphere.hh  mesh_texture.cc  mesh_texture.hh  model.cc  model.hh  (+43 more)
src/scene2D/: CMakeLists.txt  camera2D.cc  camera2D.hh  manager_2D.cc  manager_2D.hh  quadS2D.cc  quadS2D.hh  quad_manager.cc  quad_manager.hh  scene2D.cc  scene2D.hh  shapeS2D.cc  shapeS2D.hh
src/script/: CMakeLists.txt  parse.hh  script.cc  script_mesh.hh
src/shaders/: shader.fs  ui.fs  ui.vs  ui_frag.glsl  worldObjShader_fs.glsl  worldObjShader_vs.glsl  worldShader.fs  worldWireframeShader_fs.glsl  worldWireframeShader_vs.glsl
src/simulator/: CMakeLists.txt  Simulator.cpp  Simulator.hpp
src/test/: CMakeLists.txt  collection.hh  library.hh  misc.hh  module.hh  test.cc  test.hh  test_unit.cc  types.hh  unit_test.hh  unit_test_collection.hh
src/ui/: CMakeLists.txt  UiPObject.cc  UiPObject.hh  UiPScene.cc  UiPScene.hh  UiWorldObject.cc  UiWorldObject.hh  base.cc  base.hh  components.cc  components.hh  font.cc  font.hh  font_bitmap.cc  font_bitmap.hh  panel_left.hh  panel_right.hh  pui.cc  pui.hh  pui_cursor.cc  pui_cursor.hh  pui_event.hh  string.cc  string.hh  texture.cc  texture.hh  ui.cc  ui.cpp  ui.hh  ui.hpp  ui_component.cc  ui_component.hh  ui_element.cc  ui_element.hh  ui_font.cc  ui_font.hh  ui_globals.cc  ui_globals.hh  ui_list.cc  ui_list.hh  (+30 more)
src/window/: CMakeLists.txt  auxevent.hh  auxkey.cc  auxkey.hh  auxwin.cc  auxwin.hh  coordinate_transform.cc  coordinate_transform.hh  cursor.hh  glfw.cc  glfw.hh  glfw_key.cc  glfw_key.hh  key.hh  key_operators.hh  keymod.hh  phywin_callbacks.cc  phywin_callbacks.hh  phywin_types.hh  win2D.cc  win2D.hh
(+507 files in other folders)
